--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .App {
   text-align: center;
   display: grid;
-  grid-template-columns: 3fr 1fr;
-  grid-template-rows: 5vw 5vw;
+  grid-template-columns: 3fr 2fr;
+  grid-template-rows: 12vw 5vw;
   grid-template-areas:
     'header currentUser'
     'header navBar'
@@ -22,12 +22,30 @@
 .currentUser {
   grid-area: currentUser;
   display: grid;
-  grid-template-areas: 'name pic' 'username pic';
+  grid-template-areas: 'name pic' 'username pic' 'newUserInput newUserSubmit';
+  grid-template-rows: 5vh 5vh;
+  grid-template-columns: 3fr 1fr;
+}
+
+.userImg {
+  grid-area: pic;
+  /* position: relative;
+  left: 45%; */
+  max-height: 10vh;
+}
+
+.newUserInput {
+  grid-area: newUserInput;
+}
+
+.newUserSubmit {
+  grid-area: newUserSubmit;
 }
 
 .navBar {
   grid-area: navBar;
-  margin-top: 5vh;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .articles {
@@ -44,6 +62,9 @@ ul {
 }
 
 .articleList {
+  margin-top: 5vh;
+  border: 2px red;
+  border-style: solid;
   display: grid;
   grid-template-areas:
     'title title title title upBut downBut'
